--- a/pages/global.scss
+++ b/pages/global.scss
@@ -4,15 +4,16 @@ body {
 
 @keyframes changeBackgroundColor {
   0% {
-    background-color: #eabaacf;
+    background-color: #3C5186;
+    color: #fff;
   }
   50% {
-    background-color: #be3400;
+    background-color: #9B72AA;
     color: #fff;
   }
   100% {
-    background-color: #020d22;
-    color:#fff;
+    background-color: #C6B4CE;
+    color:#000;
   }
 }
 
