--- a/pages/global.scss
+++ b/pages/global.scss
@@ -5,47 +5,44 @@ body {
 @keyframes changeBackgroundColor {
   0% {
     background-color: #3C5186;
-    color: #fff;
   }
   50% {
     background-color: #9B72AA;
-    color: #fff;
   }
   100% {
-    background-color: #C6B4CE;
-    color:#000;
+    background-color: #3C5186;
   }
 }
 
 a {
   display: block;
 }
-.card-hover{
-  transition: background 2s,  transform 2s, linear;
-  position: relative ;
-  &:hover {
-    transform: rotateY(45deg);
-    background: #eabaacf;
-    & > .popup {
-      opacity: 1;
-          } 
-  }
-  
-  .popup {
-    transition: opacity 2s, linear, 3s;
-    opacity: 0;
-    position:absolute;
-    width: 100%;
-    background: #ff000096;
-    top:0;
-    left: 0;
-    right: 0;
-    bottom:0;
-    z-index: 10;
-    backdrop-filter: saturate(200%);
-    backdrop-filter: blur(5px);
-  }
-  
-}
+// .card-hover{
+//   transition: background 2s,  transform 2s, linear;
+//   position: relative ;
+//   &:hover {
+//     transform: rotateY(45deg);
+//     background: #eabaac;
+//     & > .popup {
+//       opacity: 1;
+//           }
+//   }
+
+//   .popup {
+//     transition: opacity 2s, linear, 3s;
+//     opacity: 0;
+//     position:absolute;
+//     width: 100%;
+//     background: #ff000096;
+//     top:0;
+//     left: 0;
+//     right: 0;
+//     bottom:0;
+//     z-index: 10;
+//     backdrop-filter: saturate(200%);
+//     backdrop-filter: blur(5px);
+//   }
+
+// }
 
 
