create page detailcardpage

--- a/pages/global.scss
+++ b/pages/global.scss
@@ -17,6 +17,10 @@ body {
 a {
   display: block;
 }
+// .rec .rec-swipable{
+//   gap : 3rem;
+//   width: 200px;
+// }
 // .card-hover{
 //   transition: background 2s,  transform 2s, linear;
 //   position: relative ;
